[gd_scene load_steps=4 format=2]

[ext_resource path="res://Graphics/Fonts/MainFont.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/AudioOptions.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=12]
size = 17
outline_size = 2
outline_color = Color( 0.196078, 0.196078, 0.196078, 1 )
font_data = ExtResource( 1 )

[node name="AudioOptions" type="Control"]
anchor_right = 0.284
anchor_bottom = 0.257
margin_right = 0.18399
margin_bottom = -0.199997
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VolumeSliders" type="VBoxContainer" parent="."]
margin_right = 100.0
margin_bottom = 134.0
rect_scale = Vector2( 0.7, 0.7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MasterLabel" type="Label" parent="VolumeSliders"]
margin_right = 100.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 12 )
text = "Master"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="MasterVolume" type="HSlider" parent="VolumeSliders"]
margin_top = 26.0
margin_right = 100.0
margin_bottom = 42.0
min_value = -50.0
max_value = 50.0
tick_count = 1
__meta__ = {
"_editor_description_": ""
}

[node name="SFXLabel" type="Label" parent="VolumeSliders"]
margin_top = 46.0
margin_right = 100.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 12 )
text = "SFX"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="SFXVolume" type="HSlider" parent="VolumeSliders"]
margin_top = 72.0
margin_right = 100.0
margin_bottom = 88.0
min_value = -50.0
max_value = 50.0
tick_count = 1
__meta__ = {
"_editor_description_": ""
}

[node name="MusicLabel" type="Label" parent="VolumeSliders"]
margin_top = 92.0
margin_right = 100.0
margin_bottom = 114.0
custom_fonts/font = SubResource( 12 )
text = "Music"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="MusicVolume" type="HSlider" parent="VolumeSliders"]
margin_top = 118.0
margin_right = 100.0
margin_bottom = 134.0
min_value = -50.0
max_value = 50.0
tick_count = 1
__meta__ = {
"_editor_description_": ""
}
[connection signal="value_changed" from="VolumeSliders/MasterVolume" to="." method="update_master_volume"]
[connection signal="value_changed" from="VolumeSliders/SFXVolume" to="." method="update_sfx_volume"]
[connection signal="value_changed" from="VolumeSliders/MusicVolume" to="." method="update_music_volume"]
